# espHostController

./: .gitignore  绘图1.vsdx
COM_console/: COM_console.csproj  COM_console.slnx  Program.cs
Esp-Mult/: CMakeLists.txt
Esp-Mult/main/: blink_example_main.c
EspNowController/: CMakeLists.txt
EspNowController/main/: CMakeLists.txt  ESP_Mult.c  EspnowConfig.h  F1CUart.c  F1CUart.h  NowMode.c  NowMode.h  TypeDef.h
EspNowController/pysc/: data.img  testUart.py
UartIpcController/: .gitignore  BuildFlash.sh  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  UartController  cmake_install.cmake  install_manifest.txt
UartIpcController/lib/: .directory  crrefont.cpp  crrefont.h  epass_define.h  fbdraw.c  fbdraw.h  fbdrawimg.c  fbdrawimg.h  fbdrawttf.c  fbdrawttf.h  i2c.c  i2c.h  incbin.h  keyinput.c  keyinput.h  spi.c  spi.h  uart.c  uart.h
UartIpcController/lib/RREFont/: RREFont.cpp  RREFont.h
UartIpcController/py/: host.py
UartIpcController/src/: appconfig.json  main.c
